fixed response not showing error, mods to share c

--- a/src/Pages/Playground/Compiler.module.css
+++ b/src/Pages/Playground/Compiler.module.css
@@ -186,11 +186,22 @@
 }
 
 .langSelect {
-    width: 12%;
+    width: 16%;
     max-height: 20rem;
 }
 
 .langSelect div:hover {
     cursor: pointer;
+ color: #74747486;
 }
 
+.modalDivider{
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
+
+.modalP{
+    font-size: 12px;
+    padding-top: 0;
+    margin-top: 0;
+}
